Fix: Hide bounding box rectangles around symbols
The rect elements are just invisible bounding boxes for symbol layout,
not meant to be displayed. Changed stroke from black to none.

--- a/static/css/laddereditor.css
+++ b/static/css/laddereditor.css
@@ -177,8 +177,7 @@ body {
 }
 
 #staticrunglist svg rect {
-	stroke: black;
-	stroke-width: 1;
+	stroke: none;
 	fill: none;
 }
 
